added ontouml run config

--- a/architype.ipynb
+++ b/architype.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dd235a06",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "Cases - \n",
-    "x%Structure + y%Semantics\n",
+    "x%Structure + y%Semantics \n",
     "\n",
-    "x = % of edges removed\n",
-    "y = % of type semantics removed\n",
+    "x = % of edges removed (5 values)\n",
+    "y = % of type semantics removed (5 values)\n",
     "\n",
-    "semantics = (cleansed, ordered)\n",
+    "semantics = (cleansed, ordered) (2x2)\n",
+    "distance = (0, 1, 2, 3) (4 values)\n",
+    "4x4x5x5 = 400\n",
     "\"\"\"\n",
     "\n",
     "from pydantic import BaseModel, Field\n",
@@ -73,38 +75,7 @@
    "execution_count": null,
    "id": "dc47ad7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sali/CMAI-Projects/archi-type-prediction/.venv/lib/python3.12/site-packages/torch/__init__.py:1617: UserWarning: Please use the new API settings to control TF32 behavior, such as torch.backends.cudnn.conv.fp32_precision = 'tf32' or torch.backends.cuda.matmul.fp32_precision = 'ieee'. Old settings, e.g, torch.backends.cuda.matmul.allow_tf32 = True, torch.backends.cudnn.allow_tf32 = True, allowTF32CuDNN() and allowTF32CuBLAS() will be deprecated after Pytorch 2.9. Please see https://pytorch.org/docs/main/notes/cuda.html#tensorfloat-32-tf32-on-ampere-and-later-devices (Triggered internally at /pytorch/aten/src/ATen/Context.cpp:80.)\n",
-      "  _C._set_float32_matmul_precision(precision)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading archimate from pickle\n",
-      "Loaded archimate with 574 graphs\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b865cdaded243efa94808a28c237847",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Getting node texts:   0%|          | 0/574 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from architype.architype.dataset.build import ArchiMateDataset\n",
     "from architype.architype.models.bert.trainer import BertTextClassifier\n",
@@ -170,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d21a4559",
    "metadata": {},
    "outputs": [
