--- a/architype.ipynb
+++ b/architype.ipynb
@@ -3,6 +3,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "98f14363",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import os\n",
+    "\n",
+    "results_dir = \"results\"\n",
+    "\n",
+    "#### Delete all checkpoint directories\n",
+    "for root, dirs, files in os.walk(results_dir):\n",
+    "    for d in dirs:\n",
+    "        if \"checkpoint\" in d:\n",
+    "            print(f\"Deleting checkpoint directory: {os.path.join(root, d)}\")\n",
+    "            shutil.rmtree(os.path.join(root, d))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ab6ac840",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "columns = [\"Edge Removal\", \"Type Semantic Removal\", \"Distance\", \"Cleansed\", \"Ordered\"] + [\"Loss\", \"Accuracy\", \"F1\", \"Precision\", \"Recall\"]\n",
+    "\n",
+    "conf_keys = [\"edge_removal\", \"type_semantic_removal\", \"distance\", \"cleanse\", \"ordered\"]\n",
+    "metrics = [\"eval_loss\", \"eval_accuracy\", \"eval_macro_f1\", \"eval_macro_precision\", \"eval_macro_recall\"]\n",
+    "archi_results_dir = os.path.join(\"results\", \"archi\")\n",
+    "\n",
+    "archi_results = list()\n",
+    "count = 0\n",
+    "\n",
+    "for result_dir in os.listdir(archi_results_dir):\n",
+    "    if os.path.exists(os.path.join(archi_results_dir, result_dir, \"trainer_state.json\")):\n",
+    "        with open(os.path.join(archi_results_dir, result_dir, \"trainer_state.json\"), \"r\") as f:\n",
+    "            trainer_state = json.load(f)\n",
+    "        with open(os.path.join(archi_results_dir, result_dir, \"run_config.json\"), \"r\") as f:\n",
+    "            run_config = json.load(f)\n",
+    "        best_step = trainer_state[\"best_global_step\"]\n",
+    "        best_result = [r for r in trainer_state[\"log_history\"] if r[\"step\"] == best_step and \"eval_loss\" in r.keys()][0]\n",
+    "        r = {\n",
+    "            k: best_result[k] for k in metrics\n",
+    "        }\n",
+    "        c = {\n",
+    "            k: run_config[k] for k in conf_keys\n",
+    "        }\n",
+    "        archi_results.append({**c, **r})\n",
+    "\n",
+    "len(archi_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ed339b71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "pd.DataFrame(archi_results).to_csv(\"archi_results.csv\", index=False)\n",
+    "pd.DataFrame(archi_results).to_excel(\"archi_results.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dd235a06",
    "metadata": {},
    "outputs": [],
