Removed dependency on csv archi for language

--- a/architype.ipynb
+++ b/architype.ipynb
@@ -3,21 +3,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36cee3e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import shutil\n",
+    "# import os\n",
+    "\n",
+    "\n",
+    "# models_dir = \"architype/data/raw/eamodelset/processed-models\"\n",
+    "# target_dir = \"architype/data/raw/eamodelset/raw-models\"\n",
+    "\n",
+    "# for folder in os.listdir(models_dir):\n",
+    "#     os.makedirs(os.path.join(target_dir, folder), exist_ok=True)\n",
+    "#     if os.path.isdir(os.path.join(models_dir, folder)):\n",
+    "#         for file in os.listdir(os.path.join(models_dir, folder)):\n",
+    "#             if file.endswith(\".json\"):\n",
+    "#                 shutil.copy(os.path.join(models_dir, folder, file), os.path.join(target_dir, folder, file))\n",
+    "                    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfbe527b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import shutil\n",
+    "# import os\n",
+    "\n",
+    "\n",
+    "# models_dir = \"architype/data/raw/ontouml/models\"\n",
+    "# target_dir = \"architype/data/raw/ontouml/raw-models\"\n",
+    "\n",
+    "# for folder in os.listdir(models_dir):\n",
+    "#     os.makedirs(os.path.join(target_dir, folder), exist_ok=True)\n",
+    "#     if os.path.isdir(os.path.join(models_dir, folder)):\n",
+    "#         for file in os.listdir(os.path.join(models_dir, folder)):\n",
+    "#             if file.endswith(\"ontology.json\"):\n",
+    "#                 shutil.copy(os.path.join(models_dir, folder, file), os.path.join(target_dir, folder, file))\n",
+    "                    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "98f14363",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "import os\n",
+    "# import shutil\n",
+    "# import os\n",
     "\n",
-    "results_dir = \"results\"\n",
+    "# results_dir = \"results\"\n",
     "\n",
-    "#### Delete all checkpoint directories\n",
-    "for root, dirs, files in os.walk(results_dir):\n",
-    "    for d in dirs:\n",
-    "        if \"checkpoint\" in d:\n",
-    "            print(f\"Deleting checkpoint directory: {os.path.join(root, d)}\")\n",
-    "            shutil.rmtree(os.path.join(root, d))\n",
+    "# #### Delete all checkpoint directories\n",
+    "# for root, dirs, files in os.walk(results_dir):\n",
+    "#     for d in dirs:\n",
+    "#         if \"checkpoint\" in d:\n",
+    "#             print(f\"Deleting checkpoint directory: {os.path.join(root, d)}\")\n",
+    "#             shutil.rmtree(os.path.join(root, d))\n",
     "\n"
    ]
   },
@@ -86,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dd235a06",
    "metadata": {},
    "outputs": [],
@@ -159,7 +205,31 @@
    "execution_count": null,
    "id": "dc47ad7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eacf0df549104d1589ce0b5820d88a17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading Archimate:   0%|          | 0/979 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total graphs: 574\n",
+      "Saving archimate to pickle\n",
+      "Saved archimate to pickle\n"
+     ]
+    }
+   ],
    "source": [
     "from architype.architype.dataset.build import ArchiMateDataset\n",
     "from architype.architype.models.bert.trainer import BertTextClassifier\n",
@@ -169,7 +239,7 @@
     "\n",
     "dataset_dir = os.path.join(\"architype\", \"data\", \"raw\", \"eamodelset\")\n",
     "\n",
-    "archimate_dataset = ArchiMateDataset(dataset_dir, language=config.language, config=config)\n",
+    "archimate_dataset = ArchiMateDataset(dataset_dir, language=config.language, config=config, reload=True)\n",
     "\n",
     "if config.cleanse:\n",
     "    archimate_dataset.cleanse()\n",
